fix location bar property 'z-index' to 998

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,4 +11,5 @@
   color: #FFF;
   border-bottom: 0.1rem solid #333;
   box-shadow: 0 0.2rem 0.2rem #000;
+  z-index: 999;
 }
