--- a/src/scenes/Current.css
+++ b/src/scenes/Current.css
@@ -8,7 +8,7 @@
 
 .waiting-wrap {
   position: absolute;
-  z-index: 999;
+  z-index: 998;
   top: 0;
   bottom: 0;
   left: 0;
