--- a/src/scenes/Forecast.css
+++ b/src/scenes/Forecast.css
@@ -27,6 +27,6 @@
   position: absolute;
   top: 0;
   width: 100%;
-  z-index: 999;
+  z-index: 998;
   background-color: rgba(255, 255, 255, 0.97);
 }
